# ERRE-Sandbox

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  LICENSE-MIT  NOTICE  README.ja.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: build-executor.md  code-reviewer.md  dependency-checker.md  file-finder.md  impact-analyzer.md  log-analyzer.md  security-checker.md  test-analyzer.md  test-runner.md
.claude/commands/: add-feature.md  finish-task.md  fix-bug.md  refactor.md  reimagine.md  review-changes.md  smart-compact.md  start-task.md
.claude/hooks/: post-fmt.sh  pre-edit-banned.sh  pre-edit-steering.sh  preflight.sh  session-start.sh  stop-check.sh
.codex/: budget.json  config.toml  hooks.json
.codex/hooks/: pre_tool_use_policy.py
.github/workflows/: ci.yml
.steering/: README.md  _setup-progress.md  _verify-report-20260418.md  deferred-evaluations.md
.steering/20260418-godot-project-init/: blockers.md  decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md
.steering/20260418-godot-ws-client/: blockers.md  decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260418-implementation-plan/: MASTER-PLAN.md  decisions.md  design.md  requirement.md  tasklist.md
.steering/20260418-model-pull-g-gear/: decisions.md  design.md  requirement.md  tasklist.md
.steering/20260418-pdf-extract-baseline/: design.md  requirement.md  tasklist.md
.steering/20260418-pyproject-scaffold/: decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260418-schemas-freeze/: decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260418-setup-g-gear/: decisions.md  design.md  requirement.md  tasklist.md
.steering/20260418-setup-macbook/: decisions.md  design.md  requirement.md  tasklist.md
.steering/20260419-gateway-fastapi-ws/: decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260419-godot-peripatos-scene/: blockers.md  decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260419-m2-acceptance/: acceptance-checklist.md  decisions.md  design.md  handoff-to-g-gear.md  requirement.md  session-counter-runbook.md  tasklist.md
.steering/20260419-m2-functional-closure/: acceptance-evidence.md  decisions.md  design-comparison.md  design-v1.md  design.md  handoff-to-g-gear.md  requirement.md  tasklist.md
.steering/20260419-m2-integration-e2e/: decisions.md  design-comparison.md  design-v1.md  design.md  integration-contract.md  metrics.md  requirement.md  scenarios.md  t20-acceptance-checklist.md  tasklist.md
.steering/20260419-m2-integration-e2e-execution/: decisions.md  design.md  handoff-to-macbook.md  known-gaps.md  requirement.md  tasklist.md
.steering/20260419-ui-dashboard-minimal/: decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260419-world-tick-zones/: decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260420-m4-acceptance-live/: README.md  acceptance.md  decisions.md  design.md  requirement.md  tasklist.md
.steering/20260420-m4-contracts-freeze/: decisions.md  design.md  requirement.md  tasklist.md
.steering/20260420-m4-gateway-multi-agent-stream/: decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260420-m4-memory-semantic-layer/: decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260420-m4-multi-agent-orchestrator/: decisions.md  design-comparison.md  design-v1.md  design.md  live-checklist.md  requirement.md
.steering/20260420-m4-personas-nietzsche-rikyu-yaml/: decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260420-m4-planning/: decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260420-m5-contracts-freeze/: decisions.md  design-comparison.md  design-v1.md  design.md  requirement.md  tasklist.md
.steering/20260420-m5-erre-mode-fsm/: decisions.md  design-comparison.md  (+4 more)
docs/: arasuji.md  architecture.md  development-guidelines.md  experiment-tracking.md  functional-design.md  glossary.md  loop-engineering.md  references.md  repository-structure.md  research-positioning.md
erre-sandbox-blender/: .gitignore  LICENSE  README.md
experiments/: README.md
godot_project/: project.godot
golden/: seeds.json
personas/: kant.yaml  nietzsche.yaml  rikyu.yaml
scratch_kalpha/: sanity_imports.py  step2_launch.sh  step3_load.py  step4_chat.py  step5_fsm_smoke.py  wait_for_health.sh
scripts/: aha_phase3_think_capture.py  aha_phase4b_two_phase_live_capture.py  aha_traversal_live_capture.py  aha_traversal_render_derive.py  build_adapter_manifest.py  d0_running_verdict_run.py  d0_structural_verdict_run.py  ecl_bank_capture.py  ecl_bank_cproper_capture.py  ecl_v0_golden.py  ecl_v0_live_capture.py  ecl_v1_live_capture.py  es2_verdict_run.py  es3_verdict_run.py  es4_phase0_run.py  es4_phase1_run.py  es4_scorer_diag.py  export_zone_layout.py  loop-spawn.sh  m4_society_live_capture.py  memory_recomp_conformance_verdict_run.py  p3_run0_rescue_verify.py  p3a_decide.py  p3a_summary.py  policy_banned_imports.py  regen_schema_artifacts.py  repro.sh  spdm_verdict_run.py
tests/: _glb_json.py  _godot_helpers.py  conftest.py  test_audit_plan_b_corpus_stats.py  test_behavior_profile.py  test_bootstrap.py  test_cli_baseline_metrics.py  test_cli_export_log.py  test_de_focused_monolog_collector.py  test_envelope_fixtures.py  test_envelope_kind_sync.py  test_godot_dialog_bubble.py  test_godot_mode_tint.py  test_godot_peripatos.py  test_godot_project.py  test_godot_ws_client.py  test_m9_c_adopt_pilot.py  test_main.py  test_persona_kant.py  test_schema_contract.py  test_schemas.py  test_schemas_m5.py  test_schemas_m6.py  test_schemas_m7g.py  test_smoke.py
(+1609 files in other folders)
